spec/data/mockDefs/invalid/endpoint/mockDefInvalidEndpoint.js
module.exports = function () {
  return {
    respondTo: 'GET',
    authMethod: 'Foo',
    endpoint: {},
    handledBy: () => {},
  };
};
